--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "antd": "^5.21.2",
+    "chart.js": "^4.4.6",
     "express": "^4.21.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
