--- a/package.json
+++ b/package.json
@@ -20,13 +20,20 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "antd": "^5.21.2",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.6",
-    "express": "^4.21.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.6",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
