--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "driver.js": "^1.3.1",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
